--- a/koperasiDS/resources/assets/sass/app.scss
+++ b/koperasiDS/resources/assets/sass/app.scss
@@ -7,3 +7,6 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+// font-awsome
+@import "node_modules/font-awesome/scss/font-awesome.scss";
